типоны и three.js

--- a/src/index.html
+++ b/src/index.html
@@ -407,10 +407,8 @@
                     </div>
                     <div class="employ-4">
                         <picture>
-<!--                            <source srcset="./img/layout/pages/main/employ.webp" type="image/webp">-->
-                            <img src="./img/layout/pages/main/BusRight_big.png" alt="Работник Мобильного Ситуационного центра" fetchpriority="high" class="employ">
+                            <img src="./img/layout/pages/main/BusRight_skale.png" alt="Работник Мобильного Ситуационного центра" fetchpriority="high" class="employ">
                         </picture>
-<!--                        <img src="./img/layout/pages/main/employ.png" alt="Работник Мобильного Ситуационного центра" class="employ">-->
                     </div>
                     <div class="slider-5">
                         <a class="garage_model_card" href="bus.html">
@@ -440,10 +438,8 @@
                     </div>
                     <div class="bus-6">
                         <picture>
-<!--                            <source srcset="./img/layout/pages/main/bus.webp" type="image/webp">-->
-                            <img src="./img/layout/pages/main/BusLeft_big.png" alt="Ситуационный центр" fetchpriority="high" class="bus">
+                            <img src="./img/layout/pages/main/BusLeft_skale.png" alt="Ситуационный центр" fetchpriority="high" class="bus">
                         </picture>
-<!--                        <img src="./img/layout/pages/main/bus.png" alt="Ситуационный центр" class="bus">-->
                     </div>
                     <div class="man_text-7">
                         <p class="man_text-text">Мобильный Ситцентр построен на&nbsp;базе автобуса MAN. В&nbsp;его салоне размещены рабочие места для специалистов, зал совещаний, системы связи и&nbsp;проч. Он&nbsp;полностью автономен и&nbsp;может работать как во&nbsp;время стоянки, так&nbsp;и&nbsp;в&nbsp;движении</p>
@@ -456,10 +452,8 @@
                         <div class="employ_text-wrapper">
                             <div class="employ_text_img">
                                 <picture>
-<!--                                    <source srcset="./img/layout/pages/main/employ.webp" type="image/webp">-->
-                                    <img src="./img/layout/pages/main/BusRight_big.png" alt="Работник Мобильного Ситуационного центра" loading="lazy" decoding="async" class="employ">
+                                    <img src="./img/layout/pages/main/BusRight_skale.png" alt="Работник Мобильного Ситуационного центра" loading="lazy" decoding="async" class="employ">
                                 </picture>
-<!--                                <img src="./img/layout/pages/main/employ.png" alt="Работник Мобильного Ситуационного центра" class="employ">-->
                             </div>
                             <div class="employ_text_info">
                                 <p class="employ_descr">
@@ -472,10 +466,8 @@
                         <div class="bus_text-wrapper">
                             <div class="bus_text_img">
                                 <picture>
-<!--                                    <source srcset="./img/layout/pages/main/bus.webp" type="image/webp">-->
-                                    <img src="./img/layout/pages/main/BusLeft_big.png" alt="Ситуационный центр" loading="lazy" decoding="async" class="bus">
+                                    <img src="./img/layout/pages/main/BusLeft_skale.png" alt="Ситуационный центр" loading="lazy" decoding="async" class="bus">
                                 </picture>
-<!--                                <img src="./img/layout/pages/main/bus.png" alt="Ситуационный центр" class="bus">-->
                             </div>
                             <div class="bus_text_info">
                                 <p class="bus_descr">
@@ -490,10 +482,8 @@
                                 <div class="situation_centre-card swiper-slide">
                                     <div class="slid_img">
                                         <picture>
-<!--                                            <source srcset="./img/layout/pages/main/employ.webp" type="image/webp">-->
-                                            <img src="./img/layout/pages/main/BusRight_big.png" alt="Работник Мобильного Ситуационного центра" fetchpriority="high" class="employ">
+                                            <img src="./img/layout/pages/main/BusRight_skale.png" alt="Работник Мобильного Ситуационного центра" fetchpriority="high" class="employ">
                                         </picture>
-<!--                                        <img src="./img/layout/pages/main/employ.png" alt="Работник Мобильного Ситуационного центра" class="employ">-->
                                     </div>
                                     <div class="slid_info">
                                         <p class="slider-text">
@@ -504,10 +494,8 @@
                                 <div class="situation_centre-card swiper-slide">
                                     <div class="slid_img">
                                         <picture>
-<!--                                            <source srcset="./img/layout/pages/main/bus.webp" type="image/webp">-->
-                                            <img src="./img/layout/pages/main/BusLeft_big.png" alt="Ситуационный центр" fetchpriority="high" class="bus">
+                                            <img src="./img/layout/pages/main/BusLeft_skale.png" alt="Ситуационный центр" fetchpriority="high" class="bus">
                                         </picture>
-<!--                                        <img src="./img/layout/pages/main/bus.png" alt="Ситуационный центр" class="bus">-->
                                     </div>
                                     <div class="slid_info">
                                         <p class="slider-text">
@@ -643,11 +631,11 @@
                         </div>
                     </div>
                     <div class="driver-3">
-                        <p class="driver_text">Мониторит состояние дорожной инфраструктуры. Следит за&nbsp;знаками, светофорами и&nbsp;проч</p>
+                        <p class="driver_text">Мониторит состояние дорожной инфраструктуры. Следит за&nbsp;знаками, светофорами и&nbsp;прочими объектами</p>
                         <p class="driver_text">С&nbsp;2023 года автопарк Службы помощи пополнился электрическими кроссоверами Москвич&nbsp;3е</p>
                     </div>
                     <div class="mobile_text_combo">
-                        <p class="mobile_text_combo-text">Мониторит состояние дорожной инфраструктуры. Следит за&nbsp;знаками, светофорами и&nbsp;проч</p>
+                        <p class="mobile_text_combo-text">Мониторит состояние дорожной инфраструктуры. Следит за&nbsp;знаками, светофорами и&nbsp;прочими объектами</p>
                         <p class="mobile_text_combo-text">С&nbsp;2023 года автопарк Службы помощи пополнился электрическими кроссоверами Москвич&nbsp;3е</p>
                     </div>
                     <div class="slide-5 parentCardForLargeMonitor">
@@ -773,9 +761,9 @@
                 </div>
                 <div class="footer-menu-2">
                     <div class="footer-menu-wrapper">
-                        <div class="text_wrapper">
-                            <p class="footer-menu-title">Транспорт</p>
-                        </div>
+<!--                        <div class="text_wrapper">-->
+<!--                            <p class="footer-menu-title">Транспорт</p>-->
+<!--                        </div>-->
                         <div class="footer-menu-links">
                             <a href="#traffic_patrol" class="footer-menu-link">Дорожный патруль</a>
                             <a href="#situation_centre" class="footer-menu-link">Мобильный ситуационный центр</a>
