кнопка на главную со всех страниц

--- a/src/index.html
+++ b/src/index.html
@@ -40,6 +40,11 @@
     <script defer src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
 </head>
 <body class="main">
+    <div class="BackToInnovation">
+        <img class="innovation_img" src="https://coddmac.store/innovation/innovation.svg" alt="Инновационная столица">
+        <p class="innovation_text">На главную</p>
+    </div>
+
     <header class="header_main">
         <div class="container_main">
             <div class="header__wrapper">
