--- a/src/pages/kater.html
+++ b/src/pages/kater.html
@@ -117,6 +117,10 @@
   </script>
 </head>
 <body>
+<div class="BackToInnovation">
+  <img class="innovation_img" src="https://coddmac.store/innovation/innovation.svg" alt="Инновационная столица">
+  <p class="innovation_text">На главную</p>
+</div>
 
 <div class="progress-bar">
   <div class="progress-bar-container">
