--- a/src/pages/velo.html
+++ b/src/pages/velo.html
@@ -40,6 +40,10 @@
     <script defer src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
 </head>
 <body>
+<div class="BackToInnovation">
+    <img class="innovation_img" src="https://coddmac.store/innovation/innovation.svg" alt="Инновационная столица">
+    <p class="innovation_text">На главную</p>
+</div>
 
 <div class="progress-bar">
     <div class="progress-bar-container">
