Эанимация кнопкÐи ar

--- a/src/pages/amarok.html
+++ b/src/pages/amarok.html
@@ -502,13 +502,13 @@
     }
 
     const IframeObject = {
-        AR_ON: 'https://app.vectary.com/p/05xqKl2g22Pw4ClSHgLBWU',
+        AR_ON: 'https://app.vectary.com/p/0h1LA8EqAq1G5bZx7ryLo2',
         AR_OFF: 'https://www.vectary.com/p/1N0rB9dLMcEG5uH9Q7G7dL',
-        MOBILE_AR_ON: 'https://www.vectary.com/p/0GvsPRo0LNzL2q0uOZhFYD',
+        MOBILE_AR_ON: 'https://app.vectary.com/p/0h1LA8EqAq1G5bZx7ryLo2',
         // MOBILE_AR_ON: 'https://app.vectary.com/p/05xqKl2g22Pw4ClSHgLBWU',
-        XHR_AR_ON: 'https://app.vectary.com/api/vctr-repo/v2/dependencies/cd8172d4-e177-4eba-a7cc-8ef64e6b64f9/cd8172d4-e177-4eba-a7cc-8ef64e6b64f9',
+        XHR_AR_ON: 'https://app.vectary.com/api/vctr-repo/v2/dependencies/31c351b9-f03f-49e0-ae21-b225de2d4389/31c351b9-f03f-49e0-ae21-b225de2d4389',
         XHR_AR_OFF: 'https://app.vectary.com/api/vctr-repo/v2/dependencies/1bbd3e75-b6c7-49d3-9f62-ab09edf1150a/1bbd3e75-b6c7-49d3-9f62-ab09edf1150a',
-        XHR_MOBILE_AR_ON: 'https://app.vectary.com/api/vctr-repo/v2/dependencies/b8f75d2e-2c46-476f-8b9e-379064f997f1/b8f75d2e-2c46-476f-8b9e-379064f997f1'
+        XHR_MOBILE_AR_ON: 'https://app.vectary.com/api/vctr-repo/v2/dependencies/31c351b9-f03f-49e0-ae21-b225de2d4389/31c351b9-f03f-49e0-ae21-b225de2d4389'
     };
     // let viewerApi = new VctrModelApi("9f0e8cf5-2302-46a3-8e49-0a7c4c3911d8"); // DOM Id
     let screenWidth = window.innerWidth;
