--- a/src/pages/ford.html
+++ b/src/pages/ford.html
@@ -329,6 +329,10 @@
     </div>
 </div>
 
+<div class="pulse_wrapper">
+    <div class="pulse"></div>
+</div>
+
 <iframe id="9f0e8cf5-2302-46a3-8e49-0a7c4c3911d8" src="" width="100%" height="100%" class="VectaryIframe"></iframe>
 <div id="overlay"></div>
 
