добавлен no ar страниц асоляриса

--- a/src/index.html
+++ b/src/index.html
@@ -644,7 +644,7 @@
                         <p class="mobile_text_combo-text">С&nbsp;2023 года автопарк Службы помощи пополнился электрическими кроссоверами Москвич&nbsp;3е</p>
                     </div>
                     <div class="slide-5 parentCardForLargeMonitor">
-                        <a class="garage_model_card" href="solaris_two.html">
+                        <a class="garage_model_card" href="solaris.html">
                             <div class="slid_img">
                                 <picture>
                                     <img class="menu_preview-img" src="./img/layout/pages/main/slider/solaris_gray.png" alt="Служба помощи ЦОДД" fetchpriority="high">
@@ -722,7 +722,7 @@
                                         </div>
                                     </div>
                                 </a>
-                                <a class="garage_model_card swiper-slide" href="solaris_two.html">
+                                <a class="garage_model_card swiper-slide" href="solaris.html">
                                     <div class="slid_img">
                                         <picture>
                                             <img class="menu_preview-img" src="./img/layout/pages/main/slider/solaris_gray.png" alt="Служба помощи ЦОДД" fetchpriority="high">
