--- a/src/pages/amarok.html
+++ b/src/pages/amarok.html
@@ -308,7 +308,7 @@
                             </a>
                         </div>
                         <div class="gallery_item swiper-slide">
-                            <a class="gallery_item_link" href="solaris_two.html">
+                            <a class="gallery_item_link" href="solaris.html">
                                 <picture>
                                     <img class="gallery_item-img" src="../img/layout/pages/main/slider/solaris_gray.png" alt="solaris" fetchpriority="high">
                                 </picture>
@@ -327,6 +327,10 @@
             </div>
         </div>
     </div>
+</div>
+
+<div class="pulse_wrapper">
+    <div class="pulse"></div>
 </div>
 
 <iframe id="9f0e8cf5-2302-46a3-8e49-0a7c4c3911d8" src="" width="100%" height="100%" class="VectaryIframe" allow="xr-spatial-tracking"></iframe>
@@ -503,21 +507,23 @@
 
     const IframeObject = {
         AR_ON: 'https://app.vectary.com/p/0h1LA8EqAq1G5bZx7ryLo2',
-        AR_OFF: 'https://www.vectary.com/p/1N0rB9dLMcEG5uH9Q7G7dL',
+        AR_OFF: 'https://app.vectary.com/p/5jx4MH8L4paxgGw4wGLIyM',
         MOBILE_AR_ON: 'https://app.vectary.com/p/0h1LA8EqAq1G5bZx7ryLo2',
         // MOBILE_AR_ON: 'https://app.vectary.com/p/05xqKl2g22Pw4ClSHgLBWU',
         XHR_AR_ON: 'https://app.vectary.com/api/vctr-repo/v2/dependencies/31c351b9-f03f-49e0-ae21-b225de2d4389/31c351b9-f03f-49e0-ae21-b225de2d4389',
-        XHR_AR_OFF: 'https://app.vectary.com/api/vctr-repo/v2/dependencies/1bbd3e75-b6c7-49d3-9f62-ab09edf1150a/1bbd3e75-b6c7-49d3-9f62-ab09edf1150a',
+        XHR_AR_OFF: 'https://app.vectary.com/api/vctr-repo/v2/dependencies/52ed9b9f-644e-4798-8c71-e0810e93cfbd/52ed9b9f-644e-4798-8c71-e0810e93cfbd',
         XHR_MOBILE_AR_ON: 'https://app.vectary.com/api/vctr-repo/v2/dependencies/31c351b9-f03f-49e0-ae21-b225de2d4389/31c351b9-f03f-49e0-ae21-b225de2d4389'
     };
     // let viewerApi = new VctrModelApi("9f0e8cf5-2302-46a3-8e49-0a7c4c3911d8"); // DOM Id
     let screenWidth = window.innerWidth;
     let xhrFile;
     let readySRC;
+    let ARButtonPulse = document.querySelector('.pulse_wrapper');
 
     if (screenWidth >= 700 && screenWidth <= 1200) {
         readySRC = IframeObject.AR_OFF;
         xhrFile = IframeObject.XHR_AR_OFF;
+        ARButtonPulse.style.display = 'none';
     } else if (screenWidth < 700) {
         readySRC = IframeObject.MOBILE_AR_ON;
         xhrFile = IframeObject.XHR_MOBILE_AR_ON;
