--- a/src/pages/amarok_t3.html
+++ b/src/pages/amarok_t3.html
@@ -308,7 +308,7 @@
               </a>
             </div>
             <div class="gallery_item swiper-slide">
-              <a class="gallery_item_link" href="solaris_two.html">
+              <a class="gallery_item_link" href="solaris.html">
                 <picture>
                   <img class="gallery_item-img" src="../img/layout/pages/main/slider/solaris_gray.png" alt="solaris" fetchpriority="high">
                 </picture>
