--- a/src/pages/bus.html
+++ b/src/pages/bus.html
@@ -279,7 +279,7 @@
                             </a>
                         </div>
                         <div class="gallery_item swiper-slide">
-                            <a class="gallery_item_link" href="solaris_two.html">
+                            <a class="gallery_item_link" href="solaris.html">
                                 <picture>
                                     <img class="gallery_item-img" src="../img/layout/pages/main/slider/solaris_gray.png" alt="solaris" fetchpriority="high">
                                 </picture>
@@ -298,6 +298,10 @@
             </div>
         </div>
     </div>
+</div>
+
+<div class="pulse_wrapper">
+    <div class="pulse"></div>
 </div>
 
 <iframe id="9f0e8cf5-2302-46a3-8e49-0a7c4c3911d8" src="" width="100%" height="100%" class="VectaryIframe"></iframe>
@@ -608,18 +612,20 @@
 
     const IframeObject = {
         AR_ON: 'https://www.vectary.com/p/23bkuyEyPWkahKc2YGpnPH',
-        AR_OFF: 'https://app.vectary.com/p/2SKPGRD5EsL98I1b77QFYb',
+        AR_OFF: 'https://app.vectary.com/p/33KuiZijGxYJuJrQE2wcwj',
         XHR_AR_ON: 'https://app.vectary.com/api/vctr-repo/v2/dependencies/62ddca71-a037-43e5-88c8-27d2c5589e42/62ddca71-a037-43e5-88c8-27d2c5589e42',
-        XHR_AR_OFF: 'https://app.vectary.com/api/vctr-repo/v2/dependencies/56fb6a51-3eb5-475c-abb1-2bc3d0277454/56fb6a51-3eb5-475c-abb1-2bc3d0277454'
+        XHR_AR_OFF: 'https://app.vectary.com/api/vctr-repo/v2/dependencies/48a8fdbb-7d15-4ff2-b004-f906f79292e2/48a8fdbb-7d15-4ff2-b004-f906f79292e2'
     };
     // let viewerApi = new VctrModelApi("9f0e8cf5-2302-46a3-8e49-0a7c4c3911d8"); // DOM Id
     let screenWidth = window.innerWidth;
     let xhrFile;
     let readySRC;
+    let ARButtonPulse = document.querySelector('.pulse_wrapper');
 
     if (screenWidth >= 700 && screenWidth <= 1200) {
         readySRC = IframeObject.AR_OFF;
         xhrFile = IframeObject.XHR_AR_OFF;
+        ARButtonPulse.style.display = 'none';
     } else if (screenWidth < 700) {
         readySRC = IframeObject.AR_ON;
         xhrFile = IframeObject.XHR_AR_ON;
