--- a/src/pages/ford.html
+++ b/src/pages/ford.html
@@ -308,7 +308,7 @@
                             </a>
                         </div>
                         <div class="gallery_item swiper-slide">
-                            <a class="gallery_item_link" href="solaris_two.html">
+                            <a class="gallery_item_link" href="solaris.html">
                                 <picture>
                                     <img class="gallery_item-img" src="../img/layout/pages/main/slider/solaris_gray.png" alt="solaris" fetchpriority="high">
                                 </picture>
@@ -619,20 +619,52 @@
         };
     }
 
+    // function myLoading(url) {
+    //     console.log('myLoading go!');
+    //     let xhr = new XMLHttpRequest();
+    //     xhr.open('GET', url);
+    //     xhr.onreadystatechange = function() {
+    //         if (xhr.readyState === 2) { // При получении заголовков
+    //             const startTime = new Date().getTime(); // Запоминаем время начала загрузки
+    //             const endTime = new Date().getTime(); // Запоминаем время завершения загрузки
+    //
+    //             const contentLength = xhr.getResponseHeader('Content-Length');
+    //             const fileSizeInBytes = contentLength ? parseInt(contentLength, 10) : 0;
+    //             const fileSizeInMegabytes = fileSizeInBytes / (1024 * 1024);
+    //             const downloadTimeInSeconds = (endTime - startTime) / 1000;
+    //
+    //             console.log(`Done, got ${fileSizeInMegabytes.toFixed(1)} MB in ${downloadTimeInSeconds.toFixed(1)} seconds`);
+    //             xhr.abort();
+    //             setTimeout(() => {
+    //                 isModelLoaded = true;
+    //             }, 15000);
+    //         }
+    //     };
+    //
+    //     xhr.onerror = function() {
+    //         console.log("Request failed");
+    //     };
+    //
+    //     xhr.send(); // Отправляем запрос
+    // }
+
     const IframeObject = {
         AR_ON: 'https://www.vectary.com/p/2zkou5LI5mWhXqo06RLBTm',
-        AR_OFF: 'https://app.vectary.com/p/6AE2rph5i75ecuuTtZU1iO',
+        AR_OFF: 'https://app.vectary.com/p/5dJZ40YnvAYhEKpwgClEPd',
         XHR_AR_ON: 'https://app.vectary.com/api/vctr-repo/v2/dependencies/0b38fc52-4c19-4ce8-b58e-fd6cd7ce8613/0b38fc52-4c19-4ce8-b58e-fd6cd7ce8613',
-        XHR_AR_OFF: 'https://app.vectary.com/api/vctr-repo/v2/dependencies/54923611-4f96-40be-967d-3f814e3ecb7b/54923611-4f96-40be-967d-3f814e3ecb7b'
+        XHR_AR_OFF: 'https://app.vectary.com/api/vctr-repo/v2/dependencies/0b2048e5-c81f-47bb-baa4-9e15e5d77a96/0b2048e5-c81f-47bb-baa4-9e15e5d77a96'
     };
     // let viewerApi = new VctrModelApi("9f0e8cf5-2302-46a3-8e49-0a7c4c3911d8"); // DOM Id
     let screenWidth = window.innerWidth;
     let xhrFile;
     let readySRC;
 
+    let ARButtonPulse = document.querySelector('.pulse_wrapper');
+
     if (screenWidth >= 700 && screenWidth <= 1200) {
         readySRC = IframeObject.AR_OFF;
         xhrFile = IframeObject.XHR_AR_OFF;
+        ARButtonPulse.style.display = 'none';
     } else if (screenWidth < 700) {
         readySRC = IframeObject.AR_ON;
         xhrFile = IframeObject.XHR_AR_ON;
