--- a/src/pages/solaris.html
+++ b/src/pages/solaris.html
@@ -336,6 +336,10 @@
     </div>
 </div>
 
+<div class="pulse_wrapper">
+    <div class="pulse"></div>
+</div>
+
 <iframe id="9f0e8cf5-2302-46a3-8e49-0a7c4c3911d8" src="" width="100%" height="100%" class="VectaryIframe"></iframe>
 <div id="overlay"></div>
 
@@ -508,18 +512,20 @@
 
     const IframeObject = {
         AR_ON: 'https://www.vectary.com/p/3yUUqLuKMivlvJ7atkLNjW',
-        AR_OFF: 'https://app.vectary.com/p/6NuJ33rcfyjJQL0OBfNqec',
+        AR_OFF: 'https://app.vectary.com/p/2U2k9ZjcGWwu31ICLcAMdC',
         XHR_AR_ON: 'https://app.vectary.com/api/vctr-repo/v2/dependencies/a83b092c-6a51-48ea-8bbe-a79e4d44512b/a83b092c-6a51-48ea-8bbe-a79e4d44512b',
-        XHR_AR_OFF: 'https://app.vectary.com/api/vctr-repo/v2/dependencies/fdd0ab95-c50c-429c-b652-965b98a9bd14/fdd0ab95-c50c-429c-b652-965b98a9bd14'
+        XHR_AR_OFF: 'https://app.vectary.com/api/vctr-repo/v2/dependencies/e2b158b1-c2d5-42b2-8c9a-9f588278ed30/e2b158b1-c2d5-42b2-8c9a-9f588278ed30'
     };
     // let viewerApi = new VctrModelApi("9f0e8cf5-2302-46a3-8e49-0a7c4c3911d8"); // DOM Id
     let screenWidth = window.innerWidth;
     let xhrFile;
     let readySRC;
+    let ARButtonPulse = document.querySelector('.pulse_wrapper');
 
     if (screenWidth >= 700 && screenWidth <= 1200) {
         readySRC = IframeObject.AR_OFF;
         xhrFile = IframeObject.XHR_AR_OFF;
+        ARButtonPulse.style.display = 'none';
     } else if (screenWidth < 700) {
         readySRC = IframeObject.AR_ON;
         xhrFile = IframeObject.XHR_AR_ON;
