--- a/src/pages/velo.html
+++ b/src/pages/velo.html
@@ -209,7 +209,7 @@
                             </a>
                         </div>
                         <div class="gallery_item swiper-slide">
-                            <a class="gallery_item_link" href="solaris_two.html">
+                            <a class="gallery_item_link" href="solaris.html">
                                 <picture>
                                     <img class="gallery_item-img" src="../img/layout/pages/main/slider/solaris_gray.png" alt="solaris" fetchpriority="high">
                                 </picture>
@@ -228,6 +228,10 @@
             </div>
         </div>
     </div>
+</div>
+
+<div class="pulse_wrapper">
+    <div class="pulse"></div>
 </div>
 
 <iframe id="9f0e8cf5-2302-46a3-8e49-0a7c4c3911d8" src="" width="100%" height="100%" class="VectaryIframe"></iframe>
@@ -354,18 +358,20 @@
 
     const IframeObject = {
         AR_ON: 'https://www.vectary.com/p/1OaMXKivHNjDz5dAVF1jAI',
-        AR_OFF: 'https://www.vectary.com/p/3m2dU1xt6Dmw4b4RY71iN7',
+        AR_OFF: 'https://app.vectary.com/p/5yQbC2E7fw9qvLKC8uUBfX',
         XHR_AR_ON: 'https://app.vectary.com/api/vctr-repo/v2/dependencies/f5804f89-c08b-4b41-82cd-89f109f856b6/f5804f89-c08b-4b41-82cd-89f109f856b6',
-        XHR_AR_OFF: 'https://app.vectary.com/api/vctr-repo/v2/dependencies/e92374b7-1f26-41bc-ba69-239509c8643c/e92374b7-1f26-41bc-ba69-239509c8643c'
+        XHR_AR_OFF: 'https://app.vectary.com/api/vctr-repo/v2/dependencies/136e355a-1c85-4b2d-8043-7bde4f83b47b/136e355a-1c85-4b2d-8043-7bde4f83b47b'
     };
     // let viewerApi = new VctrModelApi("9f0e8cf5-2302-46a3-8e49-0a7c4c3911d8"); // DOM Id
     let screenWidth = window.innerWidth;
     let xhrFile;
     let readySRC;
+    let ARButtonPulse = document.querySelector('.pulse_wrapper');
 
     if (screenWidth >= 700 && screenWidth <= 1200) {
         readySRC = IframeObject.AR_OFF;
         xhrFile = IframeObject.XHR_AR_OFF;
+        ARButtonPulse.style.display = 'none';
     } else if (screenWidth < 700) {
         readySRC = IframeObject.AR_ON;
         xhrFile = IframeObject.XHR_AR_ON;
