--- a/src/pages/ford.html
+++ b/src/pages/ford.html
@@ -152,15 +152,23 @@
                     </div>
                 </div>
                 <div class="tech_spec__mission-panel hidden">
+                    <img src="../img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner">
+                    <img src="../img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-2">
+                    <img src="../img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-3">
+                    <img src="../img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-4">
                     <p class="tech_spec__text">Задача</p>
-                    <div class="tech_spec__mission-panel-background"></div>
+<!--                    <div class="tech_spec__mission-panel-background"></div>-->
                 </div>
                 <div class="tech_spec__mission hidden">
                     <p class="tech_spec__text-descr">Регулировать движение на&nbsp;сложных участках, помогать водителям при поломке или аварии.</p>
                 </div>
                 <div class="tech_spec__outfit-panel hidden">
+                    <img src="../img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner">
+                    <img src="../img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-2">
+                    <img src="../img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-3">
+                    <img src="../img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-4">
                     <p class="tech_spec__text">Экипировка</p>
-                    <div class="tech_spec__outfit-panel-background"></div>
+<!--                    <div class="tech_spec__outfit-panel-background"></div>-->
                 </div>
                 <div class="tech_spec__outfit hidden">
                     <ul class="tech_spec__outfit-list">
@@ -330,6 +338,10 @@
 </div>
 
 <div class="pulse_wrapper">
+    <div class="pulse_media">
+        <img class="pulse_img" src="../img/AR-cube.svg" alt="AR">
+        <img class="pulse_img" src="../img/AR.svg" alt="AR">
+    </div>
     <div class="pulse"></div>
 </div>
 
@@ -501,7 +513,7 @@
 </a-scene>
 
 <script type="module">
-    // import { VctrModelApi } from "https://app.vectary.com/studio-lite/scripts/api.js";
+    import { VctrModelApi } from "https://app.vectary.com/studio-lite/scripts/api.js";
     let isModelLoaded = false;
 
     const LOADING_TIME = 50000;
@@ -654,11 +666,10 @@
         XHR_AR_ON: 'https://app.vectary.com/api/vctr-repo/v2/dependencies/0b38fc52-4c19-4ce8-b58e-fd6cd7ce8613/0b38fc52-4c19-4ce8-b58e-fd6cd7ce8613',
         XHR_AR_OFF: 'https://app.vectary.com/api/vctr-repo/v2/dependencies/0b2048e5-c81f-47bb-baa4-9e15e5d77a96/0b2048e5-c81f-47bb-baa4-9e15e5d77a96'
     };
-    // let viewerApi = new VctrModelApi("9f0e8cf5-2302-46a3-8e49-0a7c4c3911d8"); // DOM Id
+    let viewerApi = new VctrModelApi("9f0e8cf5-2302-46a3-8e49-0a7c4c3911d8"); // DOM Id
     let screenWidth = window.innerWidth;
     let xhrFile;
     let readySRC;
-
     let ARButtonPulse = document.querySelector('.pulse_wrapper');
 
     if (screenWidth >= 700 && screenWidth <= 1200) {
@@ -673,27 +684,27 @@
         xhrFile = IframeObject.XHR_AR_ON;
     }
 
-    // async function initializeModelApi() {
-    //     console.log('API go!');
-    //     try {
-    //         // Вызываем несуществующий метод, что приведет к ошибке (для теста)
-    //         // await viewerApi.nonExistentMethod();
-    //         await viewerApi.init();
-    //         viewerApi.isReady().then(() => {
-    //             isModelLoaded = true;
-    //             console.log('Model loaded');
-    //         });
-    //     } catch (error) {
-    //         console.error('Ошибка внутри API:', error);
-    //         myLoading(xhrFile);
-    //     }
-    // }
+    async function initializeModelApi() {
+        console.log('API go!');
+        try {
+            // Вызываем несуществующий метод, что приведет к ошибке (для теста)
+            // await viewerApi.nonExistentMethod();
+            await viewerApi.init();
+            viewerApi.isReady().then(() => {
+                isModelLoaded = true;
+                console.log('Model loaded');
+            });
+        } catch (error) {
+            console.error('Ошибка внутри API:', error);
+            myLoading(xhrFile);
+        }
+    }
 
     document.addEventListener("DOMContentLoaded", () => {
         let VectaryIframe = document.querySelector('.VectaryIframe');
         VectaryIframe.src = readySRC;
-        // initializeModelApi();
-        myLoading(xhrFile);
+        initializeModelApi();
+        // myLoading(xhrFile);
     });
 </script>
 <script>
