--- a/src/pages/ford.html
+++ b/src/pages/ford.html
@@ -160,7 +160,7 @@
 <!--                    <div class="tech_spec__mission-panel-background"></div>-->
                 </div>
                 <div class="tech_spec__mission hidden">
-                    <p class="tech_spec__text-descr">Регулировать движение на&nbsp;сложных участках, помогать водителям при поломке или аварии.</p>
+                    <p class="tech_spec__text-descr">Регулировать движение на&nbsp;сложных участках, помогать водителям при поломке или аварии</p>
                 </div>
                 <div class="tech_spec__outfit-panel hidden">
                     <img src="../img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner">
