--- a/src/pages/kater.html
+++ b/src/pages/kater.html
@@ -161,7 +161,7 @@
 <!--              <div class="tech_spec__mission-panel-background"></div>-->
           </div>
         <div class="tech_spec__mission hidden">
-          <p class="tech_spec__text-descr">Мониторинг, фиксация нарушений движения и&nbsp;стоянки в&nbsp;акватории.</p>
+          <p class="tech_spec__text-descr">Мониторинг, фиксация нарушений движения и&nbsp;стоянки в&nbsp;акватории</p>
         </div>
           <div class="tech_spec__outfit-panel hidden">
             <img src="../img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner">
@@ -500,9 +500,9 @@
 
     const IframeObject = {
         AR_ON: 'https://www.vectary.com/p/7NLghh4BVi6QtYfWBIhIiD',
-        AR_OFF: 'https://app.vectary.com/p/55RsN4DB6CYkUToJBUsqax',
+        AR_OFF: 'https://app.vectary.com/p/1l7AEo14q12UhhELZed0S1',
         XHR_AR_ON: 'https://app.vectary.com/api/vctr-repo/v2/dependencies/883d6986-662c-4ec3-b627-7af578d871a0/883d6986-662c-4ec3-b627-7af578d871a0',
-        XHR_AR_OFF: 'https://app.vectary.com/api/vctr-repo/v2/dependencies/2723e674-1b1a-4c3e-b139-a4b65995cbeb/2723e674-1b1a-4c3e-b139-a4b65995cbeb'
+        XHR_AR_OFF: 'https://app.vectary.com/api/vctr-repo/v2/dependencies/2c5af8eb-1a31-4b35-a77e-1be94264d7e7/2c5af8eb-1a31-4b35-a77e-1be94264d7e7'
     };
     let viewerApi = new VctrModelApi("9f0e8cf5-2302-46a3-8e49-0a7c4c3911d8"); // DOM Id
     let screenWidth = window.innerWidth;
